@@ -10,6 +10,7 @@ Changes in CVS:
 Produced by Jim Shore and Levi Khatskevitch.
 * Added PostBack() overload that takes actual event target and argument.  Credit to Jim Shore.
 * Fixed parsing error that occurred when combining <style> tag with HTML comments.  Credit to Jim Shore.
+* Added UrlReferrer support to the Browser (HttpClient) object.  Credit to Levi Khatskevitch.
 
 
 Changes in NUnitAsp 1.5:
